Include loading.html

--- a/app/templates/exhibitions.html
+++ b/app/templates/exhibitions.html
@@ -1,9 +1,11 @@
 {% extends "layout.html" %}
 {% block head_extras %}
 {% endblock %}
+
 {% block title %}NYC Parks Database – Exhibitions{% endblock %}
 {% block content %}
 
+{% include "include/loading.html" %}
 
 <div class="container-fluid">
 
