--- a/app/templates/orgs.html
+++ b/app/templates/orgs.html
@@ -4,6 +4,7 @@
 {% block title %}NYC Parks Database – Organizations{% endblock %}
 {% block content %}
 
+{% include "include/loading.html" %}
 
 <div class="container-fluid">
 
@@ -36,6 +37,58 @@
 					</div>
 
 				</form>
+			</div>
+		</div>
+	</section>
+
+
+
+	<section id="section--active">
+		<div class="chunk [ row justify-content-center py-5 ]">
+			<div class="[ col-md-8 ]">
+
+				<h2 class="[ display-4 py-4 ]">Active Organizations</h2>
+
+				{% for org in active_orgs %}
+					<h3 class="indent [ py-1 ]">
+						<a class="js-internal" href="{{ url_for('org', id=org.id) }}">{{ org.name }}</a>
+						{% for exhibition in org.exhibitions if (exhibition in active_exhibitions) %}
+							{{ " (" if loop.first }}<a class="js-internal" href="{{ url_for('exhibition', id=exhibition.id) }}">{{ exhibition.name }}</a>{{ "/" if not loop.last else ")" }}
+						{%- endfor -%}
+					</h3>
+
+				{% else %}
+					<p><i>There are no active organizations.</i></p>
+				{% endfor %}
+
+			</div>
+		</div>
+	</section>
+
+
+
+	<section id="section--upcoming">
+		<div class="chunk [ row justify-content-center py-5 ]">
+			<div class="[ col-md-8 ]">
+
+				<h2 class="[ display-4 py-4 ]">Upcoming Organizations</h2>
+
+
+
+			</div>
+		</div>
+	</section>
+
+
+
+	<section id="section--recent">
+		<div class="chunk [ row justify-content-center py-5 ]">
+			<div class="[ col-md-8 ]">
+
+				<h2 class="[ display-4 py-4 ]">Recent Organizations</h2>
+
+
+
 			</div>
 		</div>
 	</section>
