--- a/app/templates/orgs.html
+++ b/app/templates/orgs.html
@@ -41,6 +41,20 @@
 		</div>
 	</section>
 
+	{% macro show_orgs(org_list, exh_list, type) -%}
+		{% for org in org_list %}
+			<h3 class="indent [ py-1 ]">
+				<a class="js-internal" href="{{ url_for('org', id=org.id) }}">{{ org.name }}</a>
+				{% for exhibition in org.exhibitions if (exhibition in exh_list) %}
+					{{ " (" if loop.first }}<a class="js-internal" href="{{ url_for('exhibition', id=exhibition.id) }}">{{ exhibition.name }}</a>{{ "/" if not loop.last else ")" }}
+				{%- endfor -%}
+			</h3>
+
+		{% else %}
+			<p><i>There are no {{ type }} organizations.</i></p>
+		{% endfor %}
+	{%- endmacro %}
+
 
 
 	<section id="section--active">
@@ -73,7 +87,7 @@
 
 				<h2 class="[ display-4 py-4 ]">Upcoming Organizations</h2>
 
-
+				{{ show_orgs(upcoming_orgs, upcoming_exhibitions, "upcoming") }}
 
 			</div>
 		</div>
