Move loading.html include to layout template

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -36,6 +36,7 @@
     {% endblock %}
   </head>
   <body>
+    {% include "include/loading.html" %}
     {% block content %}{% endblock %}
   </body>
 </html>
