--- a/app/templates/include/loading.html
+++ b/app/templates/include/loading.html
@@ -1,4 +1,4 @@
-<div id="js-loading" class="full-page is-inactive">
+<div id="js-loading" class="full-page is-hidden">
   <div class="js-spinner-div is-hidden [ m-auto ]">
     Loading  <i class="fas fa-asterisk js-spinner c-green"></i>  <i class="fas fa-asterisk js-spinner c-green"></i>  <i class="fas fa-asterisk js-spinner c-green"></i>
   </div>
