Add .index--selected styling

--- a/app/static/style/src/base/_plural.scss
+++ b/app/static/style/src/base/_plural.scss
@@ -9,6 +9,7 @@
 /* Index Alpha Item: Parks */
 .index--parks {
   color: color(green--d);
+  border-bottom: 0px solid color(green--d);
 
   &:hover {
     border-bottom: 2px solid color(green--d);
@@ -53,4 +54,10 @@
   &:hover {
     border-bottom-color: color(orange--l);
   }
+}
+
+
+.index--selected {
+  color: color(grey--d);
+  border-bottom-width: 2px;
 }
