Add opacity transition to loading classes

--- a/app/static/style/src/base/_loading.scss
+++ b/app/static/style/src/base/_loading.scss
@@ -12,6 +12,16 @@
 	position: fixed;
 	width: 100vw;
 	height: 100vh;
-  z-index: 999;
+  z-index: -999;
   background: #fff;
+  transition: opacity .5s ease-in;
+}
+
+
+.js-spinner-div {
+  transition: opacity 1s ease-in;
+}
+
+.container-fluid {
+  transition: opacity .25s ease-in;
 }
