Add border-bottom to all .index--* classes

--- a/app/static/style/src/base/_plural.scss
+++ b/app/static/style/src/base/_plural.scss
@@ -20,6 +20,7 @@
 /* Index Alpha Item: Exhibitions */
 .index--exhibitions {
   color: color(purple--l);
+  border-bottom: 0px solid color(purple--l);
 
   &:hover {
     border-bottom-color: color(purple--l);
@@ -30,6 +31,7 @@
 /* Index Alpha Item: Artworks */
 .index--artworks {
   color: color(blue--l);
+  border-bottom: 0px solid color(blue--l);
 
   &:hover {
     border-bottom-color: color(blue--l);
@@ -40,6 +42,7 @@
 /* Index Alpha Item: Artists */
 .index--artists {
   color: color(pink--l);
+  border-bottom: 0px solid color(pink--l);
 
   &:hover {
     border-bottom-color: color(pink--l);
@@ -50,6 +53,7 @@
 /* Index Alpha Item: Organizations */
 .index--orgs {
   color: color(orange--l);
+  border-bottom: 0px solid color(orange--l);
 
   &:hover {
     border-bottom-color: color(orange--l);
