Add .text-center to index head

--- a/app/templates/exhibitions.html
+++ b/app/templates/exhibitions.html
@@ -147,7 +147,7 @@
 				{% endfor %}
 			</div>
 
-			<div class="[ col-md-8 order-2 mb-5 ]">
+			<div class="[ col-md-8 order-2 mb-5 text-center ]">
 				{% for item in exhibitions_index %}
 					<span id="js-index_{{ item }}" class="index index--exhibitions js-index [ display-5 ]">{{ item|upper }}</span>
 				{% endfor %}
